# DiffusionLM

./: .gitignore  README.md  example.py  example_bd.py  metal_profiler.sh  pyproject.toml
inference/: __init__.py  denoiser.py  generator.py  mask.py  sampler.py  schedules.py  sdar_wrapper.py  unmask.py
sdar_model/: __init__.py  fused_linear_diffusion_cross_entropy.py  modeling_sdar.py
tests/: conftest.py  test_block_diffusion_inference.py  test_mlx_sdar_forward.py  test_mps_benchmark.py  test_real_forward.py  test_unified_llm.py
tests/unit/: test_backend_factory.py  test_mlx_attention.py
vdllm/: __init__.py  config.py  generation.py  llm.py  sampling.py  sampling_params.py
vdllm/backends/: __init__.py  base.py  cpu_backend.py  cuda_backend.py  mlx_backend.py  mlx_kv_cache.py  mlx_model_loader.py  mlx_sdar_model.py  mps_backend.py  tensor_bridge.py  test_mlx_backend.py
vdllm/engine/: __init__.py  attention.py  block_manager.py  device.py  distributed_manager.py  llm_engine.py  mlx_engine.py  model_runner.py  scheduler.py  sequence.py
vdllm/inference/: __init__.py  generator.py  mask.py  sampler.py  schedules.py  sdar_inference.py
vdllm/kernels/: __init__.py
vdllm/layers/: __init__.py  activation.py  attention.py  embed_head.py  embedding.py  layernorm.py  linear.py  mlp.py  rmsnorm.py  rotary.py  rotary_embedding.py  sampler.py
vdllm/models/: __init__.py  config.py  mlx_sdar.py  sdar.py  sdar_moe.py
vdllm/profiling/: __init__.py  benchmark_e2e.py  mlx_profiler.py  op_timer.py
vdllm/utils/: __init__.py  context.py  hardware.py  loader.py  statics.py
(+15 files in other folders)
